# teo-ros

./: .gitignore  README.md
teo_control/: CMakeLists.txt  package.xml
teo_control/config/: effort_controllers.yaml  joint_state_controller.yaml  joint_trajectory_controllers.yaml  position_controllers.yaml  teo_control.yaml  velocity_controllers.yaml
teo_control/launch/: default_controllers.launch  joint_state_controller.launch  joint_trajectory_controllers.launch  teo_control.launch  teo_effort_controllers.launch  teo_legs_rqt.launch  teo_legs_rqt.perspective  teo_position_controllers.launch  teo_rqt.launch  teo_rqt.perspective  teo_velocity_controllers.launch
teo_control/src/: set_same_value.cpp
teo_description/: CMakeLists.txt  NOTES  README.md  package.xml
teo_description/config/: teo_display.rviz
teo_description/launch/: display.launch
teo_description/meshes/arms/: l_arm.dae  l_elbow_link.dae  l_elbow_link.stl  l_elbow_pitch.dae  l_elbow_pitch.stl  l_forearm.dae  l_hand.stl  l_humerus.dae  l_humerus.stl  l_shoulder_pitch.dae  l_shoulder_pitch.stl  l_shoulder_roll.dae  l_shoulder_roll.stl  l_shoulder_yaw.dae  l_shoulder_yaw.stl  l_union_elbow_wrist.dae  l_union_elbow_wrist.stl  l_union_humerus_elbow.dae  l_union_humerus_elbow.stl  l_wrist_pitch.stl  l_wrist_sensorFT.stl  l_wrist_yaw.stl  left_forearm.blend  r_arm.dae  r_elbow_link.stl  r_elbow_pitch.stl  r_forearm.dae  r_hand.stl  r_humerus.stl  r_shoulder_pitch.stl  r_shoulder_roll.stl  r_shoulder_yaw.stl  r_union_elbow_wrist.stl  r_union_humerus_elbow.stl  r_wrist_pitch.stl  r_wrist_sensorFT.stl  r_wrist_yaw.stl  right_forearm.blend
teo_description/meshes/legs/: l_ankle.dae  l_ankle_pitch.stl  l_ankle_roll.stl  l_ankle_sensorFT.stl  l_axialhip.dae  l_femur.stl  l_foot.blend  l_foot.dae  l_foot.stl  l_hip.dae  l_hip_pitch.stl  l_hip_yaw.stl  l_sole.stl  l_thigh.dae  l_tibia.blend  l_tibia.dae  l_tibia.stl  l_union_sensorFT_foot.stl  r_ankle.blend  r_ankle.dae  r_ankle_pitch.stl  r_ankle_roll.stl  r_ankle_sensorFT.stl  r_axialhip.dae  r_femur.stl  r_foot.blend  r_foot.dae  r_foot.stl  r_hip.dae  r_hip_pitch.stl  r_hip_yaw.stl  r_sole.stl  r_thigh.dae  r_tibia.blend  r_tibia.dae  r_tibia.stl  r_union_sensorFT_foot.stl
teo_description/meshes/torso/: L-torso-shoulder.stl  R-torso-shoulder.stl  chest.blend  chest_reduced2.dae  head.stl  left_arm.blend  neck.stl  right_arm.blend  torso.stl  torso_full.stl  waist-base.stl  waist-link.stl  waist-pitch.stl  waist-yaw.stl  waist.stl
teo_description/robots/: teo_humanoid.urdf.xacro  teo_humanoid_platform.urdf.xacro  teo_humanoid_simple_vis.urdf.xacro
teo_description/src/: teo_parser.cpp
teo_description/teo_descriptionANTERIOR/urdf/: 2teo_humanoid_complete_vis.urdf.xacro  complete_visual.urdf  complete_visual.xacro  teo.gv  teo_humanoid.sdf  teo_humanoid.urdf  teo_humanoid.urdf.xacro  teo_humanoidORIGINAL.urdf.xacro  teo_structure.urdf.xacro  teo_structure.urdf.xacro~  teo_structure2.urdf.xacro~
teo_description/teo_descriptionANTERIOR/urdf (copy)-ESTABA ANTES DEL 7-06/: TEOcopia.urdf  teo.gv  teo_humanoid.gazebo.xacro  teo_humanoid.urdf  teo_humanoid_complete.urdf  teo_humanoid_complete_vis.urdf.xacro  teo_parameters.urdf.xacro  teo_structure.urdf.xacro
teo_description/urdf/: NOTES  octave-workspace  teo.gv  teo_humanoid.gazebo.xacro  teo_humanoid.urdf  teo_humanoid.urdf.xacro  teo_humanoid_simple_vis.urdf.xacro  teo_structure.gazebo.xacro  teo_structure.urdf.xacro
teo_description/urdf/arms/: arm.urdf.xacro  arms_simple_vis.urdf.xacro  arms_vis.urdf.xacro
teo_description/urdf/legs/: leg.urdf.xacro  leg.urdf.xacro_original  leg.urdf.xacro_original2  legs_simple_vis.urdf.xacro  legs_vis.urdf.xacro
teo_description/urdf/others/: simple_visual.xacro  teo_colors.xacro  teo_constants.xacro  teo_platform.xacro  teo_transmission.xacro  visualization.xacro
teo_description/urdf/torso/: torso.urdf.xacro  torso_simple_vis.urdf.xacro  torso_vis.urdf.xacro
teo_gazebo/: CMakeLists.txt  package.xml
teo_gazebo/launch/: empty_world.launch.xml  spawn_teo.launch.xml  spawn_teo_platform.launch.xml  teo.launch  teo_platform.launch
teo_gazebo/media/materials/scripts/: uc3m.material
teo_gazebo/models/teo_ground_plane/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
teo_gazebo/worlds/: drc_practice_block_wall.world  empty.world  gas_station.world  kitchen_dining.world  teo.world
teo_msgs/: CMakeLists.txt  package.xml
teo_msgs/msg/: SupportFoot.msg  TorsoIMU.msg  TorsoOdometry.msg
teo_msgs/srv/: SetTransform.srv
teo_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
teo_tf/: CMakeLists.txt  package.xml
teo_tf/launch/: teo_odometry.launch
teo_tf/src/: teo_odometry.cpp
