<?xml version="1.0"?>
<package>
  <name>teo_control</name>
  <version>0.1.0</version>

  <description> teo_control package
    This package contains the files needed to configure the controllers of the TEO humanoid robot.

    RoboticsLab, University Carlos III of Madrid
  </description>

  <maintainer email="mingo.esteban@gmail.com">Domingo Esteban</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/teo_control</url>
  <url type="website">http://roboticslab.uc3m.es</url>

  <author email="mingo.esteban@gmail.com">Domingo Esteban</author>


  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use build_depend for packages you need at compile time: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use run_depend for packages you need at runtime: -->
<!-- 	<run_depend>controller_manager</run_depend>

  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend> -->
  
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
