<?xml version="1.0"?>
<package>
  <name>teo_gazebo</name>
  <version>0.0.1</version>
  <description>The teo_gazebo package</description>

  <maintainer email="mingo.esteban@gmail.com">Domingo Esteban</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--build_depend>gazebo_ros</build_depend-->
  <!--run_depend>gazebo_ros</run_depend-->
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
